AD-2004-04-22-0: Bugfix:    Changed thread startup order back to old one.
                            Register job resend events for jobs with status
                            'JTRANSFERING' in a separate function.
                 Changed:   qmaster
                 Review:    AH

SG-2004-04-22-2: Bugfix:   fixed memory leak in berkeleydb spooling for jobs
                           fixed memory leak in qsub 
                 Changed:  qmaster, qsub
                 Review:   AS, DT

HP-2004-04-22-0: Enhancem.: Added Docu for delegated file staging

SG-2004-04-22-1: Bugfix:   fixed memory leak cluster queue modification
                 Changed:  qmaster
                 Review:   DT, EB

SG-2004-04-22-0: Bugfix:    - fixed memory leak in sge_event_master
                            - scheduler would exit, if the qmaster is gone for
                              a while
                 Changed:   qmaster, schedd
                 Review:    CR, AD


AA-2004-04-22-0: Bugfix:    - loadadjustments display of load values was broken
                 Changed:   qmon
                 Review:    SG

JG-2004-04-22-3: Bugfix:    qmake output warning "cannot determine architecture"
                            even if the commandline contained an explicit 
                            resource request.
                            Now read from environment variable SGE_ARCH instead
                            of ARCH.
                 Review:    patch submitted by uddeborg
                 Issue:     983
                 Bugfix:    fixed aimk.site for HP11

JG-2004-04-22-2: Bugfix:    Fixed automatic installation.
                 Review:    MD

MD-2004-04-22-0: Bugfix:    LD_LIBRARY_PATH was wrong. -> wrong ARCH string
                 Review:    JG
                 Changed:   rc_templates

CR-2004-04-22-0: Bugfix:    qping now also supports auto close when qmaster
                            runs out of filedescriptors
